# stock-x

./: .env  README.md  data.csv  data2.csv  pyproject.toml  stock-market-prediction-using-cnn-lstm.ipynb
