[project]
name = "stock-x"
version = "0.1.0"
description = "A fork of the original StockX repo"
authors = [
    {name = "Mikko Ohtamaa"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorflow (>=2.19.0,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "ipython (>=9.3.0,<10.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
